# multi-module-fastapi-example

./: .gitignore  README.md  pyproject.toml
