[tool.poetry]
name = "multi-module-fastapi-example"
version = "0.1.0"
description = ""
authors = ["Pumsuk Cho <pumsuk.cho@appscroft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
